# sqlastack-core

./: .gitignore  README.md  pyproject.toml
src/sqlastack/core/: __init__.py  config.py  engine.py  exceptions.py  registry.py  session.py  testing.py
src/sqlastack/plone/: __init__.py
tests/: conftest.py  test_config.py  test_config_named.py  test_engine.py  test_exceptions.py  test_pg_smoke.py  test_plone_stub.py  test_registry.py  test_session.py  test_zope_session.py
